--- a/res/static/index.html
+++ b/res/static/index.html
@@ -1,4 +1,9 @@
-<html><head><title>HTML 5 API Index</title></head>
+<html>
+<head><title>HTML 5 API Index</title>
+<link rel="icon" 
+      type="image/png" 
+      href="html5index-miniicon.png">
+</head>
 <frameset cols="20%,80%">
   <frameset rows="40%,60%">
     <frame src="Libraries.html" name="overview" title="Libraries">
